# robotics_projects

proj1a/: README.md  main.py
proj1a/workspace/install/: local_setup.sh  setup.sh
proj1a/workspace/install/drive_spiral/lib/drive_spiral/: main
proj1a/workspace/install/drive_spiral/share/drive_spiral/: package.dsv  package.sh  package.xml
proj1a/workspace/log/: latest_build
proj1a/workspace/src/drive_spiral/: package.xml  setup.cfg  setup.py
proj1a/workspace/src/drive_spiral/drive_spiral/: button_node.py  main.py
proj2a/: README.md
proj2a/workspace/install/: local_setup.sh  setup.sh
proj2a/workspace/install/boustrophedon/lib/boustrophedon/: main
proj2a/workspace/install/boustrophedon/share/boustrophedon/: package.sh  package.xml
proj2a/workspace/log/: latest_build
proj2a/workspace/src/boustrophedon/: package.xml  setup.cfg  setup.py
proj2a/workspace/src/boustrophedon/boustrophedon/: button_node.py  hazard_node.py  ir_node.py  main.py  main.py.save  main_v1.py  main_v2.py  odom_node.py  qos_profile.py
proj2a/workspace/src/boustrophedon/boustrophedon/install/: local_setup.sh  setup.sh
proj2a/workspace/src/boustrophedon/boustrophedon/log/: latest_build
proj2a/workspace/src/boustrophedon/install/: local_setup.sh  setup.sh
proj2a/workspace/src/boustrophedon/log/: latest_build
proj2a/workspace/src/install/: local_setup.sh  setup.sh
proj2a/workspace/src/install/boustrophedon/share/boustrophedon/: package.sh  package.xml
proj2a/workspace/src/log/: latest_build
proj2a/worlds/: lab.world
(+3 files in other folders)
